add backend options logic

--- a/quarkus/options/s3/application.properties
+++ b/quarkus/options/s3/application.properties
@@ -1,3 +1,5 @@
+
+# S3 configuration
 quarkus.s3.endpoint-override=${S3_ENDPOINT:http://localhost:4566}
 quarkus.s3.aws.region=${S3_REGION:eu-west-1}
 quarkus.s3.aws.credentials.type=static
